--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body class="" style="background-color: var(--secondary-color);">
 
-  <header>
+  <header id="header">
     <nav class="navbar navbar-expand-lg navy border fixed-top border-danger" id="vavbar">
       <div class="container-fluid">
           <a class="navbar-brand ms-3 me-4" href="#!">
