--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
         <div class="col">
           <div class="card bg-dark hover h-100">
-            <img src="image/game.jpg" width="150" height="180" class="card-img-top" alt="...">
+            <img src="images/game.jpg" width="150" height="180" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Game Development</h5>
               <p class="card-text">Do you want to launch a enticing game for users or for commercial purpose. Nowadays Games are hot cake</p>
@@ -409,7 +409,7 @@
               alt="Trendy"
               class="img-fluid rounded"
              height="340" width="300"
-              id="img"
+              id="mymy"
             />
           </div>
          
@@ -419,19 +419,19 @@
 
     <div class="container-fluid foot " style="width: 100%; margin-top: 70px;" >
        
-      <div>
+      <div id="one">
         <a class="navbar-brand ms-3 me-4" href="#">
-          <img src="logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+          <img src="images/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         </a>
       </div>  
-      <div class="me ">
+      <div class="me" id="two">
         <a href="#!"><ion-icon name="logo-facebook" class="icon mx-1 fs-5"></ion-icon></a>
         <a href="#!"><ion-icon name="logo-twitter" class="icon mx-1 fs-5"></ion-icon></a>
         <a href="#!"><ion-icon name="logo-linkedin" class="icon mx-1 fs-5"></ion-icon></a>
         <a href="#!"><ion-icon name="logo-instagram" class="icon mx-1 fs-5"></ion-icon></a>
         <a href="#!"><ion-icon name="logo-github" class="icon mx-1 fs-5"></ion-icon></a>
      </div> 
-     <div>
+     <div id="tthree">
        <p class="light lastp" style="font-size: 12px;">&copy;2022 All rights reserved by Dahez</p>
      </div>
   </div>
