--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
             <li class="nav-item">
-              <a class="nav-link me-3 menu border-bottom border-danger light border-3" aria-current="page" href="#">Home</a>
+              <a class="nav-link me-3 menu border-bottom border-danger light border-3" aria-current="page" href="https://danielnatics.github.io/form/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link light me-3 menu border-bottom border-danger border-3" href="#about">About</a>
