--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
             <li class="nav-item">
-              <a class="nav-link me-3 menu border-bottom border-danger light border-3" aria-current="page" href="#">Home</a>
+              <a class="nav-link me-3 menu light" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link light me-3 menu border-bottom border-danger border-3" href="#about">About</a>
+              <a class="nav-link light me-3 menu" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link light me-3 menu border-bottom border-danger border-3" href="#services">Services</a>
+              <a class="nav-link light me-3 menu" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link light me-3 menu border-bottom border-danger border-3" href="#portfolio">Portfolio</a>
+              <a class="nav-link light me-3 menu" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link light me-3 menu border-bottom border-danger border-3" href="#blog">Blog</a>
+              <a class="nav-link light me-3 menu " href="#blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link light me-3 menu border-bottom border-danger border-3" href="#contact">Contact</a>
+              <a class="nav-link light me-3 menu" href="#contact">Contact</a>
             </li>             
           </ul>
           <div class="social mx-5 text-center mb-2">
